# nvidia-applet

./: README.md  applet.js  metadata.json  pyproject.toml  settings-schema.json
.github/: copilot-instructions.md
dev_utils/: setup_stubs.py
files/nvidia-monitor@kalin91/: applet.js  metadata.json
files/nvidia-monitor@kalin91/po/: ca.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hr.po  hu.po  is.po  it.po  ja.po  nl.po  nvidia-monitor@kalin91.pot  pt.po  ro.po  ru.po  sv.po  tr.po  zh_CN.po  zh_TW.po
files/nvidia-monitor@kalin91/scripts/: colored_graph.py  monitor.py
nvidia-monitor@kalin91/files/nvidia-monitor@kalin91/: applet.js
nvidia-monitor@kalin91/files/nvidia-monitor@kalin91/po/: ca.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hr.po  hu.po  is.po  it.po  ja.po  nl.po  nvidia-monitor@kalin91.pot  pt.po  ro.po  ru.po  sv.po  tr.po  zh_CN.po  zh_TW.po
scripts/: monitor.py
