[project]
name = "nvidia-monitor"
version = "1.0.0"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pygobject = "^3.54.5"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []


[tool.mypy]
check_untyped_defs = true
python_version = "3.13.7"
disable_error_code = ["import-untyped", "override"]
mypy_path = "./out"
files = ["src/scritps/"]


exclude = [
    '\.venv/.*',
    '.+\.pyi',
    '/opt/.*',
    '.*/site-packages/.*',
    'custom_nodes/_ComfyUI-Logic\.disabled/.*',
    'custom_nodes/_ComfyUI_essentials\.disabled/.*',
    'workspace_temp/.*',
    'src/tests/.*',
    'tests/execution/testing_nodes/testing-pack/.*',
]

[tool.pylint.master]
load-plugins = ["workspace_temp.custom_checkers"]
ignore-patterns = [
    "\\.venv/.*",
    ".+\\.pyi",
    "/opt/.*",
    ".*/site-packages/.*",
    "workspace_temp/.*",
]

[tool.pylint.messages_control]
enable = ["MissingReturnTypeChecker"]
disable = ["R0903", "I1101", "C0301", "W0718"]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.design]
max-args = 10
max-positional-arguments = 10
max-attributes = 12

[tool.flake8]
filenames = ["scripts/*.py"]
max-line-length = 120
ignore = [
    "E303", # too many blank lines
    "E704", # multiple statements on one line (def foo(): bar(); baz())
]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.egg-info",
    "**/pylint/**",
    "src/tests/**",
    "workspace_temp/**",
]
[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "mypy-extensions (>=1.1.0,<2.0.0)",
    "meson-python (>=0.19.0,<0.20.0)",
    "meson (>=1.10.1,<2.0.0)",
    "ninja (>=1.13.0,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pycairo (>=1.29.0,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
]

# --- Ruff replaces pylint + flake8 ---
[tool.ruff]
# preservé la línea larga más permisiva que tenías en pylint
line-length = 120


# Excluir carpetas grandes/no relevantes (equivalente a tus excludes de flake8/pylint)
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.egg-info",
    "node_modules",
    "workspace_temp",
    "src/tests",
]
include = ["scripts/"]
[tool.ruff.lint]
# Ignora las comprobaciones de pycodestyle que tenías en flake8
extend-ignore = [
    "E303", # too many blank lines
    "E701", # multiple statements on one line
]
# Si quieres aplicar ruff solo a los scripts (equivalente a filenames = ["scripts/*.py"])
# al ejecutar ruff puedes pasar la ruta: `ruff check scripts/`
# pero también puedes usar include para limitar a patrones:

# Ajustes de reglas (migración aproximada desde pylint):
# - R0903 (too-few-public-methods): no tiene mapeo directo en ruff; si quieres evitar
#   avisos similares, no lo incluyo (se suele ignorar en wrappers).
# - I1101 / W0718 / C0301: muchos de estos son específicos de pylint; ruff cubre
#   E/F/W de pycodestyle/pyflakes y otras reglas. Si necesitas un comportamiento
#   muy concreto, lo ajustamos puntualmente con `select` / `ignore` / `per-file-ignores`.
#
# Por ahora dejo select sin definir (usarás el conjunto por defecto de ruff),
# y extend-ignore cubre los ítems que tenías explícitos en flake8.

# Ejemplo de per-file-ignores (descomentar y ajustar si lo necesitas)
# [tool.ruff.per-file-ignores]
# "scripts/*.py" = ["D", "S101"]
