[project]
name = "nvidia-monitor"
version = "1.0.0"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pygobject = "^3.54.5"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []


[tool.mypy]
check_untyped_defs = true
python_version = "3.13"
disable_error_code = ["import-untyped", "override"]
mypy_path = "./out"
files = ["files/nvidia-monitor@kalin91/scripts/"]


exclude = [
    '\.venv/.*',
    '.+\.pyi',
    '/opt/.*',
    '.*/site-packages/.*',
    'custom_nodes/_ComfyUI-Logic\.disabled/.*',
    'custom_nodes/_ComfyUI_essentials\.disabled/.*',
    'workspace_temp/.*',
    'src/tests/.*',
    'tests/execution/testing_nodes/testing-pack/.*',
]

[tool.pylint.master]
ignore-patterns = [
    "\\.venv/.*",
    ".+\\.pyi",
    "/opt/.*",
    ".*/site-packages/.*",
    "workspace_temp/.*",
]

[tool.pylint.messages_control]
enable = ["MissingReturnTypeChecker"]
disable = ["R0903", "I1101", "C0301", "W0718"]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.design]
max-args = 10
max-positional-arguments = 10
max-attributes = 12

[tool.flake8]
filenames = ["files/nvidia-monitor@kalin91/scripts/*.py"]
max-line-length = 120
ignore = [
    "E303", # too many blank lines
    "E704", # multiple statements on one line (def foo(): bar(); baz())
]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.egg-info",
    "**/pylint/**",
    "src/tests/**",
    "workspace_temp/**",
]
[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "mypy-extensions (>=1.1.0,<2.0.0)",
    "meson-python (>=0.19.0,<0.20.0)",
    "meson (>=1.10.1,<2.0.0)",
    "ninja (>=1.13.0,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pycairo (>=1.29.0,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
]

# --- Ruff replaces pylint + flake8 ---
[tool.ruff]
# Preserved the more permissive line length you had in pylint
line-length = 120


# Exclude large/irrelevant folders (equivalent to your flake8/pylint excludes)
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.egg-info",
    "node_modules",
    "workspace_temp",
    "src/tests",
]
include = ["files/nvidia-monitor@kalin91/scripts/"]
[tool.ruff.lint]
select = ["E", "F", "D1", "ANN2"]
# Ignore pycodestyle checks you had in flake8
extend-ignore = [
    "E303", # too many blank lines
    "E701", # multiple statements on one line
]
